# backend/api/v1/financialDetails.js
@@ -19,11 +19,19 @@ exports.financialDetailsApi = function (req, res, next) {
     //checker.payPassword(req.body.orderSearchText);
     //checker.payPassword(req.body.currentPage);
     //checker.payPassword(req.body.limit);
-    //checker.payPassword(req.body.skip);
 
-    var postBody = req.body;
+    var postBody = {
+        //userId : req.session.user.id,
+        userId :  2719,
+        page : req.body.currentPage || 1
+    };
 
-    var params = Object.assign({}, {userId: 2719}, postBody);
+    if (req.body.orderDateFrom) postBody.startDate = req.body.orderDateFrom;
+    if (req.body.orderDateTo) postBody.startDate = req.body.endDate;
+    if (req.body.orderCategory) postBody.type = req.body.orderCategory;
+    if (req.body.orderSearchType) postBody.searchType = req.body.orderSearchType;
+    if (req.body.orderSearchText) postBody.searchContent = req.body.orderSearchText;
+
 
     var url = api_config.financialDetails;
     request.post({url:url, form:params, json:true}, function (err, response, body) {
